--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         alt = "sad days">
                     </div>
                     <div class = "image3">
-                        <img src = "./images/emo.jpg"
+                        <img src = "./images/emo.JPG"
                         width = auto;
                         height = 200px
                         alt = "emo days">
