--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class = "container">
                 <div class = "header-container">
                     <h1>This is the offical fan page for Waffles, the cat.</h1>
-                    <p>Waffles is a 3 year old cat that loves to sleep and misbehave. Click to subscribe to the fan club.</p>
+                    <p>Waffles is a 3 year old siamese that loves to sleep and misbehave. Click to subscribe to the fan club.</p>
                     <button>Subscribe</button>
                 </div>
                 <img  class = "portrait" src = "./images/portrait.JPG">
