--- a/gallery.html
+++ b/gallery.html
@@ -14,6 +14,7 @@
             <ul>
                 <li> <a href = "./index.html">Home</a></li>
                 <li> <a href = "./gallery.html"class = "current-page">Gallery</a></li>
+                <li> <a href = "./about.html">About</a></li>
                 <li> <a href = "https://github.com/yeaung00" target = "_blank">
                     <img src = "./images/github.png">
                 </a>
