--- a/subscribe.html
+++ b/subscribe.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign up</title>
     <link rel = "stylesheet" href = "styles2.css">
+    <script src = "script.js" defer></script>
 </head>
 
 <body>
@@ -46,6 +47,7 @@
             <div class = "textContainer sign-in">
                 <button type = "submit" form = "createAccount" class = "createAcc">Create Account</button>
                 <p>Already have an account? <a class = "login" href = "#">Log in</a></p>
+                <h1><a href = "index.html">Home</a></h1>
             </div>
             
     </div>
