--- a/subscribe.html
+++ b/subscribe.html
@@ -23,16 +23,16 @@
                 <div class = "column">
                     <form id = "createAccount" action="example.com/path" method="post">
                         <label for="firstName">First Name</label>
-                        <input type="email" name = "firstName" id="firstName" required>
+                        <input type="text" name = "firstName" id="firstName" required>
                         <label for="email">Email</label>
-                        <input type="text" name = "email" id="email" required>
+                        <input type="email" name = "email" id="email" required>
                         <label for="pw">Password</label>
                         <input type="password" name = "password" id="pw" required>
                     </form>
                     
                 </div>
                 <div class = "column">
-                    <form id = "createAccount" action="example.com/path" method="post">
+                    <form id = "createAccount-2" action="example.com/path" method="post">
                         <label for="lastName">Last Name</label>
                         <input type="text" name = "lastName" id="lastName" required>
                         <label for="phNum">Phone number</label>
